--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
   "author": "Kokoh, Alfan, Renata",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "fb": "^2.0.0",
     "jsonwebtoken": "^7.4.1",
-    "nodemon": "^1.11.0",
     "mongodb": "^2.2.30",
-    "mongoose": "^4.11.4"
+    "mongoose": "^4.11.4",
+    "nodemon": "^1.11.0",
+    "xml2json": "^0.11.0"
   },
   "bugs": {
     "url": "https://github.com/kokoht/jofi-server/issues"
